--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -1,10 +1,10 @@
 parameters:
 
-    database_host:      '%env(DB_HOST)%'
-    database_port:      '%env(DB_PORT)%'
-    database_name:      '%env(DB_DATABASE)%'
-    database_user:      '%env(DB_USER)%'
-    database_password:  '%env(DB_PASSWORD)%'
+    database_host:      '%env(MYSQL_HOST)%'
+    database_port:      '%env(MYSQL_PORT)%'
+    database_name:      '%env(MYSQL_DATABASE)%'
+    database_user:      '%env(MYSQL_USER)%'
+    database_password:  '%env(MYSQL_PASSWORD)%'
 
     mailer_transport:   "smtp"
     mailer_host:       '%env(MAILER_HOST)%'
@@ -22,3 +22,7 @@ parameters:
     jwt_public_key_path:  %kernel.project_dir%/var/jwt/public.pem    # ssh public key path
     jwt_key_pass_phrase:  '%env(JWT_KEY_PASS_PHRASE)%'               # ssh key pass phrase
     jwt_token_ttl:        86400
+
+    # fos user bundle
+    fos_user_from_email_address: '%env(FOS_USER_FROM_EMAIL_ADDRESS)%'
+    fos_user_from_email_name: '%env(FOS_USER_FROM_EMAIL_NAME)%'
