--- a/.env
+++ b/.env
@@ -1,12 +1,14 @@
 SECRET_KEY=somesupersecretkey
-DB_HOST=mysql
-DB_PORT=3306
-DB_DATABASE=db_dev
-DB_USER=dbuser
-DB_PASSWORD=dbpassword
+MYSQL_HOST=db
+MYSQL_PORT=3306
+MYSQL_DATABASE=db_dev
+MYSQL_USER=dbuser
+MYSQL_PASSWORD=dbpassword
 MYSQL_ROOT_PASSWORD=root_dbpassword
 MAILER_HOST=127.0.0.1
 MAILER_USER=~
 MAILER_PASSWORD=~
 MAILER_PORT=465
 JWT_KEY_PASS_PHRASE=qwerty
+FOS_USER_FROM_EMAIL_ADDRESS=someone@example.com
+FOS_USER_FROM_EMAIL_NAME=someone
