--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -2,30 +2,16 @@
 # https://symfony.com/doc/current/security.html
 security:
 
-    role_hierarchy:
-        ROLE_ADMIN:
-            - ROLE_USER
-            - ROLE_ALLOWED_TO_SWTICH
-
     encoders:
-        Symfony\Component\Security\Core\User\User:
-            algorithm: bcrypt
+        FOS\UserBundle\Model\UserInterface: bcrypt
 
-    # http://symfony.com/doc/current/security.html#b-configuring-how-users-are-loaded
+    role_hierarchy:
+        ROLE_ADMIN:                 ROLE_USER
+        ROLE_SUPER_ADMIN:           [ROLE_ADMIN,ROLE_ALLOWED_TO_SWTICH]
+
     providers:
-        in_memory:
-            memory:
-                users:
-                    admin:
-                        # password = admin
-                        password: $2y$13$nEScVrvxLrhruPnyC5ZYr.IotRyae.Iv2tZtfoeXnslda9Uu.39Qi
-                        roles: 'ROLE_ADMIN'
-                    bob:
-                        # password = testpass
-                        password: $2y$13$2f1m7cBKaMllfHPLOHW6X.1VtnNf8ZtnaGPshlVbnrTiSGdudICy6
-                    dave:
-                        # password = davepass
-                        password: $2y$13$.ueuTRhPEf8TFEpHKIWM5ezK1fPpZtoLoBNzAZcZCyjIuxAWNrwVO
+        fos_userbundle:
+            id: fos_user.user_provider.username_email
 
     firewalls:
         # disables authentication for assets and the profiler, adapt it according to your needs
