--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -3,9 +3,7 @@
 security:
 
     role_hierarchy:
-        ROLE_ADMIN:
-            - ROLE_USER
-            - ROLE_ALLOWED_TO_SWTICH
+        ROLE_ADMIN: [ROLE_USER]
 
     encoders:
         Symfony\Component\Security\Core\User\User:
@@ -48,10 +46,6 @@ security:
         api:
             pattern:   ^/
             stateless: true
-            switch_user:
-                stateless: true
-                parameter: "x-switch-user"
-                role: ROLE_ALLOWED_TO_SWTICH
             anonymous: true
             guard:
                 authenticators:
